fix: handling of message overflow

--- a/src/app/chat/chat-box/chat-box.component.css
+++ b/src/app/chat/chat-box/chat-box.component.css
@@ -46,3 +46,7 @@
     background-color: red;
     padding: 10px;
 }
+
+.chat-list-wrapper {
+    overflow: auto;
+}
